--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <p class="info">Clipboard instantly stores any item you copy in the cloud, 
             meaning you can access your snippets immediately on all your 
             devices. Our Mac and iOS apps will help you organize everything.</p>
+
+
+
         <div class="computer_box">
             <div class="image_box">
                 <img src="images/image-computer.png" alt="">
@@ -40,15 +43,21 @@
                 </p>
             </div>
         </div>
+
+
         <h2 class="title2">  Access Clipboard anywhere
         </h2>
         <p class="info">Whether you’re on the go, or at your computer, you can access all your Clipboard 
             snippets in a few simple clicks.</p>
+
+
         <img src="images/image-devices.png" alt="" class="top_logo">
         <h2 class="title2">Supercharge your workflow
         </h2>
         <p class="info">We’ve got the tools to boost your productivity.
         </p>
+
+
         <div class="bottom_box">
             <div class="box1">
                 <img src="images/icon-blacklist.svg" alt="">
@@ -70,7 +79,44 @@
                 <p class="info">Quick preview of all snippets on your Clipboard for easy access.
                 </p>
             </div>
+        </div>
+
+
+        <div class="box2">
+                <div class="company"><img src="images/logo-google.png" alt=""></div>
+                <div class="company"><img src="images/logo-ibm.png" alt=""></div>
+                <div class="company"><img src="images/logo-microsoft.png" alt=""></div>
+                <div class="company"><img src="images/logo-hp.png" alt=""></div>
+                <div class="company"><img src="images/logo-vector-graphics.png" alt=""></div>
+        </div>
+
+        <h2 class="title2">Clipboard for iOS and Mac OS</h2>
+        <p class="info">Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
+            and you’re ready to start adding to your clipboard.</p>
+
+            <div class="button_box">
+                <button class="green"><a href="">Download for iOS</a></button>
+                <button class="blue"><a href="">Download for Mac</a></button>
+            </div>
             
+        
+    </div>
+    <div class="footer">
+        <div class="footer_logo"><img src="images/logo.svg" alt=""></div>
+        <div class="links">
+            <div class="grid_container">
+                <div class="grid_item">FAQS</div>
+                <div class="grid_item">Privacy Policy</div>
+                <div class="grid_item">Install Guide</div>
+                <div class="grid_item">Contacts Us</div>
+                <div class="grid_item">Press Kit</div>
+                <div class="grid_item"></div>
+            </div>
+        </div>
+        <div class="socials">
+            <img src="images/icon-twitter.svg" alt="">
+            <img src="images/icon-facebook.svg" alt="">
+            <img src="images/icon-instagram.svg" alt="">
         </div>
     </div>
 </body>
